# kurabye-bisquits

./: .env.example  .gitignore  README.md  Theses.docx  pyproject.toml
app/: app.py
app/api/v1/: routes.py
app/api/v1/endpoints/: admin.py  auth.py  cart.py  product.py
app/api/v1/enpoints/: auth.py
app/core/: config.py  postgres.py
app/core/logging/: filters.py
app/domain/: enums.py
app/domain/entities/: cart.py  compositionElement.py  constants.py  inventory.py  order.py  product.py  user.py
app/domain/exceptions/: cartExceptions.py  productExceptions.py
app/front/static/css/: auth-form.css  basket.css  contacts.css  productDetail.css
app/front/static/js/: auth-form.js
app/front/templates/: basket.html  order-detail.html  profile.html
app/logs/: log_app
app/repository/: abstractRepositroies.py  admin_repository.py  cartRepository.py  orderRepository.py  productRepository.py  repository_abstract.py  userRepository.py  user_repository.py
app/repository/fake/: cartRepository.py  productRepository.py
app/repository/sql/: cartQueries.py  orderQueries.py  productQueries.py  user_queries.py
app/schemas/: cart.py  inventory_schemas.py  order.py  order_schemas.py  product.py  user.py
app/services/: abstractServices.py  admin_service.py  cartService.py  productService.py  userService.py
app/static/: static.py
app/static/css/: admin.css  basket.css  catalog.css  contacts.css  fonts.css  header.css  order-detail.css  order.css  ovsyanoe.css  profile-page.css
app/static/js/: admin.js  auth-form.js  authUtils.js  basket.js  header-auth-status.js  lgbt.js  order-detail.js  order-form.js  profile-page.js  scroll.js
app/static/js/http/: catalogLoader.js  productDetail.js
app/templates/: admin.html  auth.html  basket.html  index.html  order-detail.html  order.html  ovsyanoe.html  profile.html
app/templates/css/: basket.css  catalog.css  contacts.css  main.css  order.css  ovsyanoe.css  style.css
app/templates/js/: scroll.js
app/utils/: auth.py  cartUtils.py
